config/namespace_1.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: billion-dollar-game
  labels:
    name: billion-dollar-game
    environment: production
