config/namespace_2.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: billion-dollar-game
  labels:
    app: billion-dollar-game
    environment: production
