config/character-creator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: character-creator
  namespace: soulfra
spec:
  replicas: 2
  selector:
    matchLabels:
      app: character-creator
  template:
    metadata:
      labels:
        app: character-creator
    spec:
      containers:
      - name: character-creator
        image: soulfra/character-creator:latest
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: character-creator
  namespace: soulfra
spec:
  selector:
    app: character-creator
  ports:
  - port: 5000
    targetPort: 5000
---
