config/simple-chat_1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-chat
  namespace: soulfra
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simple-chat
  template:
    metadata:
      labels:
        app: simple-chat
    spec:
      containers:
      - name: simple-chat
        image: soulfra/simple-chat:latest
        ports:
        - containerPort: 5555
---
apiVersion: v1
kind: Service
metadata:
  name: simple-chat
  namespace: soulfra
spec:
  selector:
    app: simple-chat
  ports:
  - port: 5555
    targetPort: 5555
---
